--- a/MongoDbApplication/Views/Home/Index.cshtml
+++ b/MongoDbApplication/Views/Home/Index.cshtml
@@ -6,4 +6,34 @@
     {
         @Html.Action("CharacterPartial", new { character = item})
     }
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#create-modal">Add character</button>
+
+
+<div class="modal fade" id="create-modal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">New character</h5>
+                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form id="character-create" method="post" action="/Home/AddCharacter">
+                    <div class="form-group">
+                        <label for="recipient-name" class="col-form-label">Name:</label>
+                        <input type="text" class="form-control" name="Name" id="character-name">
+                    </div>
+                    <div class="form-group">
+                        <label for="message-text" class="col-form-label">Class:</label>
+                        <input type="text" class="form-control" name="Class" id="character-class">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="submit" form="character-create" class="btn btn-primary">Save</button>
+            </div>
+        </div>
+    </div>
 </div>
