--- a/MongoDbApplication/Views/Home/CharacterPartial.cshtml
+++ b/MongoDbApplication/Views/Home/CharacterPartial.cshtml
@@ -2,7 +2,7 @@
 @{ 
     Character character = Model as Character;
 }
-<div class="card col-md-3">
+<div class="card col-md-3 character-card" style="display:inline-block">
     @*<div class="card-header">
         @character.Name
     </div>*@
