--- a/MongoDbApplication/Views/Home/Index.cshtml
+++ b/MongoDbApplication/Views/Home/Index.cshtml
@@ -2,11 +2,18 @@
     ViewBag.Title = "Home Page";
 }
 
+<div class="row">
     @foreach (var item in Model)
     {
-        @Html.Action("CharacterPartial", new { character = item})
+        @Html.Action("CharacterPartial", new { character = item })
     }
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#create-modal">Add character</button>
+</div>
+<div class="row">
+    <div class="col-md-2">
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#create-modal">Add character</button>
+    </div>
+</div>
+
 
 
 <div class="modal fade" id="create-modal" tabindex="-1" role="dialog" aria-hidden="true">
@@ -21,12 +28,16 @@
             <div class="modal-body">
                 <form id="character-create" method="post" action="/Home/AddCharacter">
                     <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Name:</label>
+                        <label for="character-name" class="col-form-label">Name:</label>
                         <input type="text" class="form-control" name="Name" id="character-name">
                     </div>
                     <div class="form-group">
-                        <label for="message-text" class="col-form-label">Class:</label>
+                        <label for="character-class" class="col-form-label">Class:</label>
                         <input type="text" class="form-control" name="Class" id="character-class">
+                    </div>
+                    <div class="form-group">
+                        <label for="character-strength" class="col-form-label">Strength:</label>
+                        <input type="range" min="0" max="5" class="form-control" name="Strength" id="character-strength">
                     </div>
                 </form>
             </div>
