--- a/MongoDbApplication/Views/Shared/_Layout.cshtml
+++ b/MongoDbApplication/Views/Shared/_Layout.cshtml
@@ -12,10 +12,10 @@
         <div class="container">
             <div class="navbar-header">
                 @*<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>*@
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>*@
                 @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
@@ -36,6 +36,7 @@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
+    @*@Scripts.Render("~/Scripts/custom")*@
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
