--- a/MongoDbApplication/Views/Home/CharacterPartial.cshtml
+++ b/MongoDbApplication/Views/Home/CharacterPartial.cshtml
@@ -10,6 +10,13 @@
         <h5 class="card-title">@character.Name</h5>
         <h6 class="card-subtitle mb-2 text-muted">@character.Class</h6>
         <br />
+        <div class="stats-container">
+            <h6 class="card-subtitle mb-2">Stats:</h6>
+            <p>Strength: @character.Strength</p>
+            <p>Dexterity: @character.Dexterity</p>
+            <p>Wits: @character.Wits</p>
+            <p>Empathy: @character.Empathy</p>
+        </div>
         <h6 class="card-subtitle mb-2">Inventory @(character.Inventory.Items.Count)/@character.Inventory.Capacity:</h6>
 
         <ul class="list-group list-group-flush">
