--- a/MongoDbApplication/Views/Home/Index.cshtml
+++ b/MongoDbApplication/Views/Home/Index.cshtml
@@ -26,18 +26,31 @@
                 </button>
             </div>
             <div class="modal-body">
+                    
                 <form id="character-create" method="post" action="/Home/AddCharacter">
                     <div class="form-group">
                         <label for="character-name" class="col-form-label">Name:</label>
-                        <input type="text" class="form-control" name="Name" id="character-name">
+                        <input type="text" class="form-control" name="charName" id="character-name">
                     </div>
                     <div class="form-group">
                         <label for="character-class" class="col-form-label">Class:</label>
-                        <input type="text" class="form-control" name="Class" id="character-class">
+                        <input type="text" class="form-control" name="charClass" id="character-class">
                     </div>
                     <div class="form-group">
                         <label for="character-strength" class="col-form-label">Strength:</label>
-                        <input type="range" min="0" max="5" class="form-control" name="Strength" id="character-strength">
+                        <input type="range" min="0" max="5" class="form-control" name="strength" id="character-strength">
+                    </div>
+                    <div class="form-group">
+                        <label for="character-strength" class="col-form-label">Dexterity:</label>
+                        <input type="range" min="0" max="5" class="form-control" name="dex" id="character-dexterity">
+                    </div>
+                    <div class="form-group">
+                        <label for="character-strength" class="col-form-label">Wits:</label>
+                        <input type="range" min="0" max="5" class="form-control" name="wits" id="character-wits">
+                    </div>
+                    <div class="form-group">
+                        <label for="character-strength" class="col-form-label">Empathy:</label>
+                        <input type="range" min="0" max="5" class="form-control" name="empathy" id="character-empathy">
                     </div>
                 </form>
             </div>
